--- a/about-us.html
+++ b/about-us.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>About Us - IDHS</title>
+    <title>About Us - AERO TRACK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -17,18 +17,18 @@
                 <div class="d-inline-flex align-items-center text-white">
                     <small><i class="fa fa-phone-alt mr-2"></i>+92-333-5170474</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>idhscourier@gmail.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/IDHS-international-courier-services/100063862313331/">
+                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/AERO TRACK-international-courier-services/100063862313331/">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-white px-2" target="_blank" href="https://www.instagram.com/idhscourier?igsh=MzZia3JpNHMyMjlw">
+                    <a class="text-white px-2" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="text-white pl-2" target="_blank" href="https://www.youtube.com/@idhsinternationalcourier">
+                    <a class="text-white pl-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier">
                         <i class="fab fa-youtube"></i>
                     </a>
                 </div>
@@ -85,10 +85,10 @@
                     <h6 class="text-primary text-uppercase font-weight-bold">About Us</h6>
                     <h1 class="mb-4">Trusted & Faster Courier & Cargo Services Provider</h1>
                     <div class="mb-4">
-                        <p>At IDHS, we are your reliable partner for fast and efficient courier and cargo services, both nationally and internationally. Whether you're sending documents, parcels, or large cargo, we offer affordable and tailored solutions to meet your shipping needs. Our commitment is to provide you with the fastest, most secure, and cost-effective delivery options to destinations across the globe.</p>
+                        <p>At AERO TRACK, we are your reliable partner for fast and efficient courier and cargo services, both nationally and internationally. Whether you're sending documents, parcels, or large cargo, we offer affordable and tailored solutions to meet your shipping needs. Our commitment is to provide you with the fastest, most secure, and cost-effective delivery options to destinations across the globe.</p>
                         <p>We serve a wide range of countries including the <mark>UK, USA, UAE, Canada, Oman, Thailand, Germany, Saudi Arabia, Australia, France, Spain, Europe</mark> and many more - ensuring that your shipments reach their destination quickly and safely, no matter where you are or where you're sending it.</p>
                         <p>Our easy-to-use <strong>Online Tracking System</strong> keeps you updated every step of the way, giving you peace of mind and full transparency throughout the shipping process. By leveraging our strategic partnerships and global network, we are able to offer <strong>Discounted Rates</strong> that make shipping more affordable for individuals and businesses alike.</p>
-                        <p>At IDHS, we believe in making logistics seamless. Whether it's a small parcel, urgent document, or bulk cargo, we are here to deliver with care, reliability, and the best value in the industry. Trust us to handle your shipments with precision, speed, and professionalism, wherever you need to send them.</p>
+                        <p>At AERO TRACK, we believe in making logistics seamless. Whether it's a small parcel, urgent document, or bulk cargo, we are here to deliver with care, reliability, and the best value in the industry. Trust us to handle your shipments with precision, speed, and professionalism, wherever you need to send them.</p>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 <div class="col-lg-7 py-5 py-lg-0">
                     <h6 class="text-primary text-uppercase font-weight-bold">Why Choose Us</h6>
                     <h1 class="mb-4">Faster, Safe and Trusted Courier & Cargo Services</h1>
-                    <p class="mb-4">When it comes to shipping your parcels and cargo, we understand that you need a service that is fast, reliable, and cost-effective. Here's why IDHS is the best choice for all your courier and cargo needs:</p>
+                    <p class="mb-4">When it comes to shipping your parcels and cargo, we understand that you need a service that is fast, reliable, and cost-effective. Here's why AERO TRACK is the best choice for all your courier and cargo needs:</p>
                     <ul class="list-inline">
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Global Reach with Local Expertise</h6></li>
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Fast & Reliable Delivery</h6></li>
@@ -131,11 +131,11 @@
                         <p><i class="fa fa-map-marker-alt mr-2"></i>B 18 AL BILAL PLAZA Chandni Chowk Flyover Satellite Town, Rawalpindi Pakistan</p>
                         <p><i class="fa fa-mobile mr-2"></i>+92-333-5170474</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>051-4851197, 051-4927026</p>
-                        <p><i class="fa fa-envelope mr-2"></i>idhscourier@gmail.com</p>
+                        <p><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/IDHS-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@idhsinternationalcourier"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/idhscourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/AERO TRACK-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
@@ -167,7 +167,7 @@
     <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">© <a href="#">IDHS</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+                <p class="m-0 text-white">© <a href="#">AERO TRACK</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
                 <ul class="nav d-inline-flex">
