--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Contact - IDHS</title>
+    <title>Contact - AERO TRACK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -17,18 +17,18 @@
                 <div class="d-inline-flex align-items-center text-white">
                     <small><i class="fa fa-phone-alt mr-2"></i>+92-333-5170474</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>idhscourier@gmail.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/IDHS-international-courier-services/100063862313331/">
+                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/AERO TRACK-international-courier-services/100063862313331/">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-white px-2" target="_blank" href="https://www.instagram.com/idhscourier?igsh=MzZia3JpNHMyMjlw">
+                    <a class="text-white px-2" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="text-white pl-2" target="_blank" href="https://www.youtube.com/@idhsinternationalcourier">
+                    <a class="text-white pl-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier">
                         <i class="fab fa-youtube"></i>
                     </a>
                 </div>
@@ -80,7 +80,7 @@
                     <div class="bg-primary text-white text-center p-4 mb-4">
                         <h4 class="m-0">B 18 AL BILAL PLAZA Chandni Chowk Flyover Satellite Town, Rawalpindi Pakistan</h4>
                     </div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.0769748582634!2d73.09156607625084!3d33.64464914014857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df95a1f3a1d2f3%3A0x3d4c4c4c4c4c4c4c!2sIDHS%20INTERNATIONAL%20COURIER%20AND%20CARGO%20SERVICE!5e0!3m2!1sen!2s!4v1234567890123!5m2!1sen!2s" 
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.0769748582634!2d73.09156607625084!3d33.64464914014857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df95a1f3a1d2f3%3A0x3d4c4c4c4c4c4c4c!2sAERO%20TRACK%20INTERNATIONAL%20COURIER%20AND%20CARGO%20SERVICE!5e0!3m2!1sen!2s!4v1234567890123!5m2!1sen!2s" 
                         style="width: 100%; height: 400px; border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <div class="col-lg-7">
@@ -129,11 +129,11 @@
                         <p><i class="fa fa-map-marker-alt mr-2"></i>B 18 AL BILAL PLAZA Chandni Chowk Flyover Satellite Town, Rawalpindi Pakistan</p>
                         <p><i class="fa fa-mobile mr-2"></i>+92-333-5170474</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>051-4851197, 051-4927026</p>
-                        <p><i class="fa fa-envelope mr-2"></i>idhscourier@gmail.com</p>
+                        <p><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/IDHS-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@idhsinternationalcourier"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/idhscourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/AERO TRACK-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
@@ -165,7 +165,7 @@
     <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">© <a href="#">IDHS</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+                <p class="m-0 text-white">© <a href="#">AERO TRACK</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
                 <ul class="nav d-inline-flex">
@@ -233,7 +233,7 @@
                     $("#btnContact").hide();
                     $("#loading").show();
 
-                    $.post(`https://idhs.com.pk/admin_idhs/apiinquiry/inquiry.php?name=${name}&email=${email}&phone=${phone}&message=${message}`, function (response)
+                    $.post(`https://aerotrack.com.pk/admin_aerotrack/apiinquiry/inquiry.php?name=${name}&email=${email}&phone=${phone}&message=${message}`, function (response)
                     {
                         $("#btnContact").show();
                         $("#loading").hide();
