--- a/services.html
+++ b/services.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Services - IDHS</title>
+    <title>Services - AERO TRACK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -17,18 +17,18 @@
                 <div class="d-inline-flex align-items-center text-white">
                     <small><i class="fa fa-phone-alt mr-2"></i>+92-333-5170474</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>idhscourier@gmail.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/IDHS-international-courier-services/100063862313331/">
+                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/AERO TRACK-international-courier-services/100063862313331/">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-white px-2" target="_blank" href="https://www.instagram.com/idhscourier?igsh=MzZia3JpNHMyMjlw">
+                    <a class="text-white px-2" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="text-white pl-2" target="_blank" href="https://www.youtube.com/@idhsinternationalcourier">
+                    <a class="text-white pl-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier">
                         <i class="fab fa-youtube"></i>
                     </a>
                 </div>
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <p class="m-0">Best service very cooperative staff over there.very reliable.if u need fast delivery
-                        service then you need to choose IDHS courier service</p>
+                        service then you need to choose AERO TRACK courier service</p>
                 </div>
                 <div class="position-relative bg-secondary p-4">
                     <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
@@ -229,7 +229,7 @@
                     </div>
                     <p class="m-0">Recived parcel before the day they mentioned..
                         It was my first experiance and I m 💯 % satisfied with their servies . Rates are good than other
-                        services.. Abir bhai is very cooperative person. Highly recommended IDHS service.</p>
+                        services.. Abir bhai is very cooperative person. Highly recommended AERO TRACK service.</p>
                 </div>
                 <div class="position-relative bg-secondary p-4">
                     <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
@@ -242,9 +242,9 @@
                             <small>Client</small>
                         </div>
                     </div>
-                    <p class="m-0">It was a wonderful experience while using IDHS courier service.Fast service with low
+                    <p class="m-0">It was a wonderful experience while using AERO TRACK courier service.Fast service with low
                         prices.I recieved my order timely and the parcel was also safe.
-                        If you need fast delivery services then you also need to choose IDHS courier service.</p>
+                        If you need fast delivery services then you also need to choose AERO TRACK courier service.</p>
                 </div>
             </div>
         </div>
@@ -261,11 +261,11 @@
                         <p><i class="fa fa-map-marker-alt mr-2"></i>B 18 AL BILAL PLAZA Chandni Chowk Flyover Satellite Town, Rawalpindi Pakistan</p>
                         <p><i class="fa fa-mobile mr-2"></i>+92-333-5170474</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>051-4851197, 051-4927026</p>
-                        <p><i class="fa fa-envelope mr-2"></i>idhscourier@gmail.com</p>
+                        <p><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/IDHS-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@idhsinternationalcourier"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/idhscourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/AERO TRACK-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
@@ -297,7 +297,7 @@
     <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">© <a href="#">IDHS</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+                <p class="m-0 text-white">© <a href="#">AERO TRACK</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
                 <ul class="nav d-inline-flex">
@@ -365,7 +365,7 @@
                     $("#btnContact").hide();
                     $("#loading").show();
 
-                    $.post(`https://idhs.com.pk/admin_idhs/apiinquiry/inquiry.php?name=${name}&email=${email}&phone=${phone}&message=${message}`, function (response)
+                    $.post(`https://aerotrack.com.pk/admin_aerotrack/apiinquiry/inquiry.php?name=${name}&email=${email}&phone=${phone}&message=${message}`, function (response)
                     {
                         $("#btnContact").show();
                         $("#loading").hide();
