--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ document.addEventListener('DOMContentLoaded', function() {
                         and internationally. Whether you're sending documents, parcels, or large cargo, we offer affordable and tailored
                         solutions to meet your shipping needs. Our commitment is to provide you with the fastest, most secure, and
                         cost-effective delivery options to destinations across the globe.</p>
-                        <p>We serve a wide range of countries including the <mark>UK, USA, UAE, Canada, Oman, Thailand, Germany, Saudi Arabia, Australia,
-                        France, Spain, Europe</mark> and many more - ensuring that your shipments reach their destination quickly and safely, no matter where
+                        <p>We serve a wide range of countries including the <mark>UK, USA, UAE, Sri Lanka, Oman, Thailand, Germany, Saudi Arabia, Australia,
+                        France, Spain, Europe, India & Pakistan</mark> and many more - ensuring that your shipments reach their destination quickly and safely, no matter where
                         you are or where you're sending it.</p>
                         
                        <p>Our easy-to-use <a href="tracking.html"><strong>Online Tracking System</strong></a> keeps you updated every step of the way, giving you peace of mind and full
