--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>About Us - Aero Track</title>
+    <title>About Us - AeroTrack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/Aero Track-international-courier-services/100063862313331/">
+                    <a class="text-white px-2" target="_blank" href="https://web.facebook.com/people/AeroTrack-international-courier-services/100063862313331/">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                     <a class="text-white px-2" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw">
@@ -85,10 +85,10 @@
                     <h6 class="text-primary text-uppercase font-weight-bold">About Us</h6>
                     <h1 class="mb-4">Trusted & Faster Courier & Cargo Services Provider</h1>
                     <div class="mb-4">
-                        <p>At Aero Track, we are your reliable partner for fast and efficient courier and cargo services, both nationally and internationally. Whether you're sending documents, parcels, or large cargo, we offer affordable and tailored solutions to meet your shipping needs. Our commitment is to provide you with the fastest, most secure, and cost-effective delivery options to destinations across the globe.</p>
+                        <p>At AeroTrack, we are your reliable partner for fast and efficient courier and cargo services, both nationally and internationally. Whether you're sending documents, parcels, or large cargo, we offer affordable and tailored solutions to meet your shipping needs. Our commitment is to provide you with the fastest, most secure, and cost-effective delivery options to destinations across the globe.</p>
                         <p>We serve a wide range of countries including the <mark>UK, USA, UAE, Sri Lanka, Oman, Thailand, Germany, Saudi Arabia, Australia, France, Spain, Europe, India & Pakistan</mark> and many more - ensuring that your shipments reach their destination quickly and safely, no matter where you are or where you're sending it.</p>
                         <p>Our easy-to-use <strong>Online Tracking System</strong> keeps you updated every step of the way, giving you peace of mind and full transparency throughout the shipping process. By leveraging our strategic partnerships and global network, we are able to offer <strong>Discounted Rates</strong> that make shipping more affordable for individuals and businesses alike.</p>
-                        <p>At Aero Track, we believe in making logistics seamless. Whether it's a small parcel, urgent document, or bulk cargo, we are here to deliver with care, reliability, and the best value in the industry. Trust us to handle your shipments with precision, speed, and professionalism, wherever you need to send them.</p>
+                        <p>At AeroTrack, we believe in making logistics seamless. Whether it's a small parcel, urgent document, or bulk cargo, we are here to deliver with care, reliability, and the best value in the industry. Trust us to handle your shipments with precision, speed, and professionalism, wherever you need to send them.</p>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 <div class="col-lg-7 py-5 py-lg-0">
                     <h6 class="text-primary text-uppercase font-weight-bold">Why Choose Us</h6>
                     <h1 class="mb-4">Faster, Safe and Trusted Courier & Cargo Services</h1>
-                    <p class="mb-4">When it comes to shipping your parcels and cargo, we understand that you need a service that is fast, reliable, and cost-effective. Here's why Aero Track is the best choice for all your courier and cargo needs:</p>
+                    <p class="mb-4">When it comes to shipping your parcels and cargo, we understand that you need a service that is fast, reliable, and cost-effective. Here's why AeroTrack is the best choice for all your courier and cargo needs:</p>
                     <ul class="list-inline">
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Global Reach with Local Expertise</h6></li>
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Fast & Reliable Delivery</h6></li>
@@ -133,7 +133,7 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>051-4851197, 051-4927026</p>
                         <p><i class="fa fa-envelope mr-2"></i>aerotrackcourier@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/Aero Track-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://web.facebook.com/people/AeroTrack-international-courier-services/100063862313331/"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" target="_blank" href="https://www.youtube.com/@aerotrackinternationalcourier"><i class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social" target="_blank" href="https://www.instagram.com/aerotrackcourier?igsh=MzZia3JpNHMyMjlw"><i class="fab fa-instagram"></i></a>
                         </div>
@@ -167,7 +167,7 @@
     <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: #3E3E4E !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">© <a href="#">Aero Track</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+                <p class="m-0 text-white">© <a href="#">AeroTrack</a>. All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
                 <ul class="nav d-inline-flex">
