--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     </div>
                     <p class="m-0">Recived parcel before the day they mentioned..
                         It was my first experiance and I m 💯 % satisfied with their servies . Rates are good than other
-                        services.. Abir bhai is very cooperative person. Highly recommended AeroTrack service.</p>
+                        services.. Amanda is very cooperative person. Highly recommended AeroTrack service.</p>
                 </div>
                 <div class="position-relative bg-secondary p-4">
                     <i class="fa fa-3x fa-quote-right text-primary position-absolute" style="top: -6px; right: 0;"></i>
