--- a/admin.html
+++ b/admin.html
@@ -406,6 +406,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     
     <script>
+        // Cache Buster: 2026-02-06-14-30-00
         // ==================== SUPABASE CONFIGURATION ====================
         // Replace these with your actual Supabase credentials
         const SUPABASE_URL = 'https://phkdpxeamlynzunhiuso.supabase.co';
