--- a/services.html
+++ b/services.html
@@ -146,26 +146,24 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="bg-primary py-5 px-4 px-sm-5" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/header.jpg');">
-                        <form class="py-5" name="sentMessage" id="contactForm" novalidate="novalidate">
+                        <form class="py-5" name="sentMessage" id="contactForm" action="https://formspree.io/f/xqedzwwe" method="POST">
+                            <input type="hidden" name="_subject" value="Quote Request - Services Page">
                             <div id="success"></div>
                             <div class="form-group">
-                                <input id="name" type="text" class="form-control border-0 p-4" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name">
+                                <input name="name" id="name" type="text" class="form-control border-0 p-4" placeholder="Your Name" required="required">
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input id="email" type="email" class="form-control border-0 p-4" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email">
+                                <input name="email" id="email" type="email" class="form-control border-0 p-4" placeholder="Your Email" required="required">
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input id="phone" type="phone" class="form-control border-0 p-4" placeholder="Your Phone" required="required" data-validation-required-message="Please enter your phone">
+                                <input name="phone" id="phone" type="phone" class="form-control border-0 p-4" placeholder="Your Phone" required="required">
                                     <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input id="message" type="text" class="form-control border-0 p-4" placeholder="Your Message" required="required" data-validation-required-message="Please enter your message">
+                                <input name="message" id="message" type="text" class="form-control border-0 p-4" placeholder="Your Message" required="required">
                                     <p class="help-block text-danger"></p>
-                            </div>
-                                     <div id="loading" class="textAlignCenter">
-                                <img style="width: 50px; height: 50px;" src="img/view-loader.gif">
                             </div>
                             <div>
                                 <button class="btn btn-dark btn-block border-0 py-3" type="submit" id="btnContact">Get A Quote</button>
@@ -282,12 +280,15 @@
             <div class="col-lg-5 col-md-6 mb-5">
                 <h3 class="text-primary mb-4">Newsletter</h3>
                 <div class="w-100">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-light" style="padding: 30px;" placeholder="Your Email Address">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary px-4">Sign Up</button>
+                    <form id="newsletterForm" action="https://formspree.io/f/xqedzwwe" method="POST">
+                        <input type="hidden" name="_subject" value="Newsletter Subscription">
+                        <div class="input-group">
+                            <input type="email" name="email" class="form-control border-light" style="padding: 30px;" placeholder="Your Email Address" required>
+                            <div class="input-group-append">
+                                <button type="submit" class="btn btn-primary px-4">Sign Up</button>
+                            </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -330,78 +331,5 @@
     <script src="mail/jqBootstrapValidation.min.js"></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <script>
-        $(document).ready(function ()
-        {
-            $("#btnContact").show();
-            $("#loading").hide();
-            $("#contactForm input").jqBootstrapValidation({
-                preventSubmit: true,
-                submitError: function ($form, event, errors)
-                {
-
-                },
-                submitSuccess: function ($form, event)
-                {
-                    event.preventDefault();
-                    var name = $("input#name").val();
-                    var email = $("input#email").val();
-                    var phone = $("input#phone").val();
-                    var message = $("input#message").val();
-                    
-                    if (name == '' || name == null || email == '' || email == null || phone == '' || phone == null || message == '' || message == null)
-                    {
-                        $('#success').html("<div class='alert alert-danger'>");
-                        $('#success > .alert-danger').html("<button type='button' class='close' data-dismiss='alert' aria-hidden='true'>&times;")
-                            .append("</button>");
-                        $('#success > .alert-danger').append($("<strong>").text("Required fields are missing"));
-                        $('#success > .alert-danger').append('</div>');
-                        $('#contactForm').trigger("reset");
-                        $("#btnContact").show();
-                        $("#loading").hide();
-                        return;
-                    }
-
-                    $("#btnContact").hide();
-                    $("#loading").show();
-
-                    $.post(`https://aerotrack.com.pk/admin_aerotrack/apiinquiry/inquiry.php?name=${name}&email=${email}&phone=${phone}&message=${message}`, function (response)
-                    {
-                        $("#btnContact").show();
-                        $("#loading").hide();
-                        if (!response.succeeded)
-                        {
-                            $('#success').html("<div class='alert alert-danger'>");
-                            $('#success > .alert-danger').html("<button type='button' class='close' data-dismiss='alert' aria-hidden='true'>&times;")
-                                .append("</button>");
-                            $('#success > .alert-danger').append($("<strong>").text("" + response.message + ""));
-                            $('#success > .alert-danger').append('</div>');
-                            $('#contactForm').trigger("reset");
-                            $("#btnContact").show();
-                            $("#loading").hide();
-                        }
-                        else
-                        {
-                            $('#success').html("<div class='alert alert-success'>");
-                            $('#success > .alert-success').html("<button type='button' class='close' data-dismiss='alert' aria-hidden='true'>&times;")
-                                .append("</button>");
-                            $('#success > .alert-success')
-                                .append("<strong>We have received your message. We will get back to you soon. </strong>");
-                            $('#success > .alert-success')
-                                .append('</div>');
-                            $('#contactForm').trigger("reset");
-                            $("#btnContact").show();
-                            $("#loading").hide();
-                        }
-                    }, 'json');
-
-                },
-                filter: function ()
-                {
-                    return $(this).is(":visible");
-                },
-            });
-        });
-    </script>
 </body>
 </html>
