--- a/about-us.html
+++ b/about-us.html
@@ -152,8 +152,9 @@
             <div class="col-lg-5 col-md-6 mb-5">
                 <h3 class="text-primary mb-4">Newsletter</h3>
                 <div class="w-100">
-                    <form id="newsletterForm" action="https://formspree.io/f/xqedzwwe" method="POST">
+                    <form id="newsletterForm" action="https://formspree.io/f/xqedzwwe" method="POST" target="hidden_iframe">
                         <input type="hidden" name="_subject" value="Newsletter Subscription">
+                        <div id="newsletterSuccess"></div>
                         <div class="input-group">
                             <input type="email" name="email" class="form-control border-light" style="padding: 30px;" placeholder="Your Email Address" required>
                             <div class="input-group-append">
@@ -202,5 +203,14 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+    <script>
+        $('#newsletterForm').on('submit', function() {
+            setTimeout(function() {
+                $('#newsletterSuccess').html("<div class='alert alert-success mt-2'><button type='button' class='close' data-dismiss='alert'>&times;</button><strong>Thank you for subscribing to our newsletter!</strong></div>");
+                $('#newsletterForm')[0].reset();
+            }, 500);
+        });
+    </script>
 </body>
 </html>
