--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                     <h6 class="text-primary text-uppercase font-weight-bold">CONTACT US</h6>
                     <h1 class="mb-4">Contact For Any Queries</h1>
                     <div class="contact-form bg-secondary" style="padding: 30px;">
-                        <form name="sentMessage" id="contactForm" action="https://formspree.io/f/xqedzwwe" method="POST">
+                        <form name="sentMessage" id="contactForm" action="https://formspree.io/f/xqedzwwe" method="POST" target="hidden_iframe">
                             <div id="success"></div>
                             <div class="form-group">
                                 <input name="name" id="name" type="text" class="form-control border-0 p-4" placeholder="Your Name" required="required">
@@ -147,7 +147,7 @@
             <div class="col-lg-5 col-md-6 mb-5">
                 <h3 class="text-primary mb-4">Newsletter</h3>
                 <div class="w-100">
-                    <form id="newsletterForm" action="https://formspree.io/f/xqedzwwe" method="POST">
+                    <form id="newsletterForm" action="https://formspree.io/f/xqedzwwe" method="POST" target="hidden_iframe">
                         <input type="hidden" name="_subject" value="Newsletter Subscription">
                         <div id="newsletterSuccess"></div>
                         <div class="input-group">
@@ -199,5 +199,23 @@
     <script src="mail/jqBootstrapValidation.min.js"></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+    <script>
+        // Contact form success message
+        $('#contactForm').on('submit', function() {
+            setTimeout(function() {
+                $('#success').html("<div class='alert alert-success'><button type='button' class='close' data-dismiss='alert'>&times;</button><strong>Thank you! Your message has been sent successfully. We will get back to you soon.</strong></div>");
+                $('#contactForm')[0].reset();
+            }, 500);
+        });
+        
+        // Newsletter form success message
+        $('#newsletterForm').on('submit', function() {
+            setTimeout(function() {
+                $('#newsletterSuccess').html("<div class='alert alert-success mt-2'><button type='button' class='close' data-dismiss='alert'>&times;</button><strong>Thank you for subscribing to our newsletter!</strong></div>");
+                $('#newsletterForm')[0].reset();
+            }, 500);
+        });
+    </script>
 </body>
 </html>
