--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ document.addEventListener('DOMContentLoaded', function() {
                 </div>
                 <div class="col-lg-5">
                     <div class="bg-primary py-5 px-4 px-sm-5" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/header.jpg');">
-                        <form class="py-5" name="sentMessage" id="contactForm" action="https://formspree.io/f/xqedzwwe" method="POST">
+                        <form class="py-5" name="sentMessage" id="contactForm" action="https://formspree.io/f/xqedzwwe" method="POST" target="hidden_iframe">
                             <input type="hidden" name="_subject" value="Quote Request">
                             <div id="success"></div>
                             <div class="form-group">
@@ -802,8 +802,9 @@ document.addEventListener('DOMContentLoaded', function() {
                 <h3 class="text-primary mb-4">Newsletter</h3>
                 <!-- <p>Rebum labore lorem dolores kasd est, et ipsum amet et at kasd, ipsum sea tempor magna tempor. Accu kasd sed ea duo ipsum. Dolor duo eirmod sea justo no lorem est diam</p> -->
                 <div class="w-100">
-                    <form id="newsletterForm" action="https://formspree.io/f/xqedzwwe" method="POST">
+                    <form id="newsletterForm" action="https://formspree.io/f/xqedzwwe" method="POST" target="hidden_iframe">
                         <input type="hidden" name="_subject" value="Newsletter Subscription">
+                        <div id="newsletterSuccess"></div>
                         <div class="input-group">
                             <input type="email" name="email" id="newsletterEmail" class="form-control border-light" style="padding: 30px;" placeholder="Your Email Address" required>
                             <div class="input-group-append">
@@ -863,6 +864,23 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+    <script>
+        // Quote form success message
+        $('#contactForm').on('submit', function() {
+            setTimeout(function() {
+                $('#success').html("<div class='alert alert-success'><button type='button' class='close' data-dismiss='alert'>&times;</button><strong>Thank you! We received your quote request and will contact you soon.</strong></div>");
+                $('#contactForm')[0].reset();
+            }, 500);
+        });
+        
+        // Newsletter form success message
+        $('#newsletterForm').on('submit', function() {
+            setTimeout(function() {
+                $('#newsletterSuccess').html("<div class='alert alert-success mt-2'><button type='button' class='close' data-dismiss='alert'>&times;</button><strong>Thank you for subscribing to our newsletter!</strong></div>");
+                $('#newsletterForm')[0].reset();
+            }, 500);
+        });
+    </script>
 
 <script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'},{'ap':'cpsh-oh'},{'server':'sxb1plzcpnl506302'},{'dcenter':'sxb1'},{'cp_id':'10835299'},{'cp_cl':'8'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src="../slpCUi5sxNWq.com/signals/js/clients/scc-c2/sIxkQydi8A5H.js"></script></body></html>
